--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,10 +1,10 @@
 <html lang="en">
 <head>
-	<script src="http://m.rabidlabs.net/js/mootools-1.2.js"></script>
 	<link rel="stylesheet" href="/styles/main.css" />
 	<link rel="stylesheet" href="/styles/message_styles.css" />
 	<link rel="stylesheet" href="/styles/tiles.css" />
 	<link rel="stylesheet" href="/styles/ansi.css" />
+	<script src="/scripts/mootools.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/scripts/discord.js"></script>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
