Tweaked the styling of the wallpaper image we won't be using for very long.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,6 +1,6 @@
 body {
    background: #00040D;
-	background:url("http://princesse33.free.fr/Dragons/Dragon_head_Wallpaper.jpg") repeat fixed left bottom #00040D;
+	background:url("http://princesse33.free.fr/Dragons/Dragon_head_Wallpaper.jpg") no-repeat fixed right bottom #00040D;
 }
 
 h1 {
