Added a theme.css file to the base layout which can be easily superceded by the local world install.

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,11 @@
+<!doctype html>
 <html lang="en">
 <head>
 	<link rel="stylesheet" href="/styles/main.css" />
 	<link rel="stylesheet" href="/styles/message_styles.css" />
 	<link rel="stylesheet" href="/styles/tiles.css" />
 	<link rel="stylesheet" href="/styles/ansi.css" />
+	<link rel="stylesheet" href="/styles/theme.css" />
 	<script src="/scripts/mootools.js"></script>
 	<script src="/socket.io/socket.io.js"></script>
 	<script src="/scripts/discord.js"></script>
