--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div id="output">
 	<div id="console"> </div>
-	<textarea id="commandLine"> </textarea>
+	<textarea id="commandLine" autofocus> </textarea>
 </div>
 
 <div id="panel">
