--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,20 +1,43 @@
-<h1><%= world_name %></h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="/styles/main.css" />
+  <link rel="stylesheet" href="/styles/message_styles.css" />
+  <link rel="stylesheet" href="/styles/tiles.css" />
+  <link rel="stylesheet" href="/styles/ansi.css" />
+  <link rel="stylesheet" href="/styles/theme.css" />
+  <script src="/scripts/mootools.js"></script>
+  <script src="/socket.io/socket.io.js"></script>
+  <script src="/scripts/discord.js"></script>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
-<div id="output">
-	<div id="console"> </div>
-	<textarea id="commandLine"> </textarea>
-</div>
+  <title></title>
+  
+</head>
 
-<div id="panel">
-	<div id="map"> </div>
+<body>
 
-	<div id="player">
-		<span id="player-hp"> </span>
-		<span id="player-mp"> </span>
-	</div>
-</div>
-<script>
-(function() {
-	var client = new Discord();
-})();
-</script>
+  <h1><%= world_name %></h1>
+
+  <div id="output">
+    <div id="console"> </div>
+    <textarea id="commandLine"> </textarea>
+  </div>
+
+  <div id="panel">
+    <div id="map"> </div>
+
+    <div id="player">
+      <span id="player-hp"> </span>
+      <span id="player-mp"> </span>
+    </div>
+  </div>
+  <script>
+  (function() {
+    var client = new Discord();
+  })();
+  </script>
+
+</body>
+
+</html>
